--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -1,8 +1,8 @@
 source 'http://rubygems.org'
 
 gem 'rails', '3.0.0'
-gem 'bson_ext'
-gem 'mongo_mapper'
+gem 'sqlite3-ruby', :require => 'sqlite3'
 gem 'bcrypt-ruby', :require => 'bcrypt'
 gem 'haml'
+gem 'rake', '0.8.7'
 
