--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -4,5 +4,5 @@ gem 'rails', '3.0.10'
 gem 'sqlite3-ruby', :require => 'sqlite3'
 gem 'bcrypt-ruby', :require => 'bcrypt'
 gem 'haml'
-gem 'rake', '0.8.7'
+gem 'rake'
 
